welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var i=0
	
		while(vuBiscuit()==false)
		{
			avance()
			i=i+1
		}
	return i
	
}
